src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;

    /*Juanca Styles*/
    --gradient-podio1: radial-gradient(
      887px circle at 6.04% 42.13%,
      #0422d0 0%,
      #1aa1b6 80%
    );

    --gradient-podio2: radial-gradient(
      887px circle at 6.04% 42.13%,
      #0422d0 0%,
      #1aa1b6 40%
    );

    --gradient-podio3: radial-gradient(
      887px circle at 6.04% 42.13%,
      #0422d0 0%,
      #1aa1b6 20%
    );
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  *,
  ::after,
  ::before {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
  }

  html {
    font-size: 16px;
  }
  body {
    color: white;
    margin: 0;
    line-height: inherit;
    display: block;
    margin-inline: auto;
    margin-top: 5rem;
    /* overflow-x: hidden; */

    @apply bg-background text-foreground;
  }
}

li {
  display: flex;
  align-items: center;
  gap: 0.3rem;
}

Table {
  pointer-events: none;
  border-radius: 6px;
  background-color: rgba(0, 0, 0, 0.087);
  margin-block: 1rem;
  margin-inline: auto;
}

.tablebg {
  background-color: rgba(0, 0, 0, 0.087);
}

tr {
  border-color: #282828;
}

.podioGeneralHombres:nth-child(1) {
  background: red;
}

.podioGeneralHombres:nth-child(2) {
  background: rgb(147, 0, 0);
}
.podioGeneralHombres:nth-child(3) {
  background: rgb(56, 0, 0);
}

.podioGeneralMujeres:nth-child(1) {
  background: rgb(196, 1, 196);
}

.podioGeneralMujeres:nth-child(2) {
  background: purple;
}
.podioGeneralMujeres:nth-child(3) {
  background: rgb(80, 0, 80);
}

.ulMenu li {
  background-color: #000000b1;
  padding: 0.5rem;
  text-align: center;
  border-radius: 2px;
  box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.276);
}

.ulMenu > * {
  border-radius: 2px;
}

.ulMenuMujeres li {
  background-color: #000000b1;
  padding: 0.5rem;
  text-align: center;
  border-radius: 2px;
  box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.276);
}

.ulMenuMujeres > * {
  border-radius: 2px;
}

.mujeres-trophy {
  background: rgb(196, 1, 196);
  pointer-events: none;
  top: -10px;
  right: 6px;
}

.hombres-trophy {
  background: red;
  pointer-events: none;
  top: -10px;
  right: 6px;
}

@media screen and (min-width: 600px) {
  Table {
    max-width: 52rem;
  }
  thead {
    font-size: 1rem;
  }
  tbody {
    font-size: 1rem;
  }
}

@media screen and (min-width: 1080px) {
  .categoriesMenu {
    height: fit-content;
  }

  .ulMenu {
    grid-template-columns: repeat(12, 1fr);
    gap: 0.5rem;
  }

  .ulMenu li:hover {
    background-color: rgb(147, 0, 0);
  }

  .categoriesMenuMujeres {
    height: fit-content;
  }

  .ulMenuMujeres {
    grid-template-columns: repeat(12, 1fr);
    gap: 0.5rem;
  }

  .ulMenuMujeres li:hover {
    background-color: purple;
  }
}

